# KoReRE

./: .gitignore  Präsentation2.pptx  Präsentation2_Final.pptx  README.md
Client/Client/: Server.vcxproj  Server.vcxproj.filters
Client/Client/src/: CMain.cpp  CPreRendering.cpp  CSceneManager.cpp  CSceneManager.h  Connection.hpp  Server.h  logger.h  main.cpp
ReRe-Client/: CMakeLists.txt
ReRe-Client/MacLibs/: libGLEW.1.9.0.dylib  libIL.1.dylib  libboost_serialization-mt.dylib  libboost_system-mt.dylib  libboost_thread-mt.dylib  libglfw.dylib  libopencv_core.2.4.dylib  libopencv_features2d.dylib  libopencv_flann.dylib  libopencv_imgproc.2.4.dylib  libopencv_ts.dylib
ReRe-Client/ReRe-Client/: CCamera.cpp  CCamera.h  CDefinitions.h  CH264Decoder.cpp  CH264Decoder.h  CMain.cpp  CPreRendering.cpp  CPreRendering.h  CRemoteNetwork.cpp  CRemoteNetwork.h  CSceneManager.cpp  CSceneManager.h  CSceneNode.cpp  CSceneNode.h  CTransformAiToGlm.h  Camera.cpp  Camera.h  Client.cpp  Client.h  Connection.hpp  ImageQueue.cpp  ImageQueue.h  MatrixQueue.cpp  MatrixQueue.h  NoSerialClient.cpp  NoSerialClient.h  Packet.h  PreRendering.cpp  PreRendering.h  ReRe_Client.1  RemoteNetwork.cpp  RemoteNetwork.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  SerializableImage.h  SerializableImage.hpp  SerializableMatrix.hpp  main.cpp
ReRe-Client/ReRe-Client.xcodeproj/: project.pbxproj
ReRe-Client/ReRe-Client.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ReRe-Client/ReRe-Client.xcodeproj/project.xcworkspace/xcuserdata/thomaskipshagen.xcuserdatad/: UserInterfaceState.xcuserstate
ReRe-Client/ReRe-Client.xcodeproj/xcuserdata/thomaskipshagen.xcuserdatad/xcschemes/: ReRe-Client.xcscheme  xcschememanagement.plist
ReRe-Client/ReReClient.xcodeproj/project.xcworkspace/xcuserdata/inaschroeder.xcuserdatad/: UserInterfaceState.xcuserstate
ReRe-Client/ReReClient.xcodeproj/xcuserdata/inaschroeder.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
ReRe-Client/ReReClient.xcodeproj/xcuserdata/inaschroeder.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ReReClient.xcscheme  ZERO_CHECK.xcscheme  xcschememanagement.plist
ReRe-Client/Shader/: CDiffuseImage.frag  CDiffuseImage.vert  CShowFBOforTesting.frag  CShowFBOforTesting.vert  warping.frag  warping.vert
ReRe-Server/: CMakeLists.txt  server.sln
ReRe-Server/Server/: ConcurrentQueue.cpp  KoRE_Log.txt  README.txt  Server.vcxproj  Server.vcxproj.filters
ReRe-Server/Server/move to %BOOST_PATH%.boost.move.detail/: meta_utils.hpp
ReRe-Server/Server/src/: Client.cpp  Client.h  ConcurrentQueue.cpp  ConcurrentQueue.h  Connection.cpp  Connection.h  Connection.hpp  Encoder.cpp  Encoder.h  H264FramedSource.cpp  H264FramedSource.h  H264LiveVideoSubsession.cpp  H264LiveVideoSubsession.h  ImageQueue.cpp  ImageQueue.h  MatrixQueue.cpp  MatrixQueue.h  NoSerialClient.cpp  NoSerialServer.cpp  NoSerialServer.h  RTSPOnDemandServer.cpp  RTSPOnDemandServer.h  Scene.cpp  Scene.h  SerializableImage.hpp  SerializableMatrix.hpp  Server.cpp  Server.h  Streamer.cpp  Streamer.h  logger.cpp  logger.h  main.cpp
ReRe-Server/Server/src/Rendering/: DeferredPass.cpp  DeferredPass.h  FullscreenQuad.cpp  FullscreenQuad.h  RenderPass.cpp  RenderPass.h  ShadowMapPass.cpp  ShadowMapPass.h
ReRe-Server/Server/src/Rendering/Stages/: GBufferStage.cpp  GBufferStage.h  ShadowMapStage.cpp  ShadowMapStage.h
warps_testing/: README.md
warps_testing/WarpingImage/shaders/: min.frag  min.vert  norm.frag  norm.vert  texture.frag
warps_testing/WarpingImage/src/: Box.h  MatrixState.cpp  MatrixState.h  Rectangle.h  Util.cpp  Util.h  WarpingImage.cpp
warps_testing/firstWarpingTest/shaders/: norm.frag  texture.vert
warps_testing/firstWarpingTest/src/: MatrixState.cpp  MatrixState.h  Warping.cpp
